# blog

./: README.md
blog/: db.sqlite3  pyproject.toml
blog/blog/: models.py  tests.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py
blog/blog_project/: settings.py  urls.py
blog/blog_project/blog_project/: settings.py
blog/templates/: base.html  home.html  post_detail.html
demo/message-board/: db.sqlite3  pyproject.toml
demo/message-board/message_board_project/: settings.py  urls.py
demo/message-board/posts/: models.py  urls.py  views.py
demo/message-board/posts/migrations/: 0001_initial.py
demo/message-board/templates/: home.html  post_detail.html
