[tool.poetry]
name = "message-board"
version = "0.1.0"
description = "message board"
authors = ["venugopalakrishna-ch <venugopalakrishna.ch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
